manifests/gitea/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
spec:
  to:
    kind: Service
    name: gitea
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
